// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-confirm-dialog SSR > renders default (closed) 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Confirm Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  aria-modal="true"
  class="dialog dialog--narrow dialog--close"
  closedby="closerequest"
  role="alertdialog"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Delete Address?
    </h2>
  </div>
  <div
    class="dialog__main"
    id="GENERATED-1"
  >
    <p>
      You will permanently lose this address.
    </p>
  </div>
  <div
    class="dialog__footer"
  >
    <button
      class="btn btn--secondary"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-describedby="GENERATED-1"
      autofocus=""
      class="btn btn--primary"
      type="button"
    >
      Delete
    </button>
  </div>
</dialog>"
`;

exports[`evo-confirm-dialog SSR > renders in open state 1`] = `
"<button
  class="btn btn--secondary"
  type="button"
>
  Open Confirm Dialog
</button>
<dialog
  aria-labelledby="GENERATED-0"
  aria-modal="true"
  class="dialog dialog--narrow"
  closedby="closerequest"
  role="alertdialog"
>
  <div
    class="dialog__header"
  >
    <h2
      class="dialog__title"
      id="GENERATED-0"
    >
      Delete Address?
    </h2>
  </div>
  <div
    class="dialog__main"
    id="GENERATED-1"
  >
    <p>
      You will permanently lose this address.
    </p>
  </div>
  <div
    class="dialog__footer"
  >
    <button
      class="btn btn--secondary"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-describedby="GENERATED-1"
      autofocus=""
      class="btn btn--primary"
      type="button"
    >
      Delete
    </button>
  </div>
</dialog>"
`;
